# ProxyFleet

./: .gitattributes  .gitignore  AGENTS.md  DECISIONS.md  FILE_MANIFEST.json  PLAN.md  PROJECT_STATE.md  README.md  SOURCES.md  component-locks.json  pyproject.toml  update-manifest.json
adr/: ADR-0001-platform-and-stack.md  ADR-0002-distributed-selection.md  ADR-0003-salt-control-plane.md  ADR-0004-containerization-boundary.md  ADR-0005-config-build-and-release-ownership.md  ADR-0006-git-scm-and-repository-operations.md  ADR-0007-native-mihomo-production-and-local-overrides.md
checkpoints/: ARCH-ORCH.md  COMPAT-SHELLCRASH.md  CONFIG-BUILD.md  CONTROL-SALT.md  DATA-MIHOMO.md  DOCS-KNOWLEDGE.md  GIT-SCM.md  OPS-PLATFORM.md  PRODUCT-SPEC.md  QA-RELEASE.md  README.md  SECURITY.md  SESSION_REGISTRY.md
docs/: DEPLOYMENT_DOCKER.md  GIT_OPERATIONS.md  INSTALL_MASTER.md  INSTALL_MINION.md  MASTER_TUI_GUIDE.md  OPERATIONS.md  SUPPLY_CHAIN_SECURITY.md  USER_MANUAL.md
evidence/: README.md
handoffs/: HANDOFF_TEMPLATE.md
interfaces/: COMPONENT_LOCKS.md  CONTRACTS.md  MIHOMO_DRIVER.md
results/: RESULT_PACKET_TEMPLATE.md  RP-0001-documentation-baseline.md  RP-0002-git-governance-baseline.md  RP-0003-local-git-init.md  RP-0010-component-locking-baseline.md  RP-0011-config-build-poc.md  RP-0012-subagent-governance-audit.md  RP-0013-subscription-cache-poc.md  RP-0014-salt-install-scripts.md  RP-0015-proxy-config-select-sync.md  RP-0016-plan-health-and-ux.md  RP-0017-subscription-mihomo-health-apply.md  RP-0018-native-mihomo-port-policy-planning.md  (+7 more)
rfcs/: RFC_TEMPLATE.md
(+55 files in other folders)
